--- a/src/template.html
+++ b/src/template.html
@@ -3,7 +3,40 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>TODO List</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="project-part">
+			<h1>Projects</h1>
+			<button class="new-project-btn">New Project</button>
+			<ul class="projects-list">
+				<button>Main Project</button>
+				<button>Main Project</button>
+				<button>Main Project</button>
+			</ul>
+		</div>
+		<div class="todo-items">
+			<h2>Project : Main Project</h2>
+			<button class="new-todo-btn">New Todo</button>
+			<div class="todos-list">
+				<div class="todo">
+					<h4>todo title</h4>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptas quam, ab
+						aliquam cum voluptate ipsa, eos expedita consequatur eius blanditiis ad dicta magni
+						iusto ipsam dolores ratione sed at.
+					</p>
+					<br />
+					<h4>Due Date:</h4>
+					<p>12/06/2025</p>
+					<h4>Status :</h4>
+					<p>Done</p>
+					<h4>Priority:</h4>
+					<p>Low</p>
+				</div>
+				<div class="todo"></div>
+				<div class="todo"></div>
+			</div>
+		</div>
+	</body>
 </html>
