Link the DOM and the storage to enable adding new projects

--- a/src/template.html
+++ b/src/template.html
@@ -13,19 +13,17 @@
 				<h3>Project Form</h3>
 				<form>
 					<div class="input">
-						<label for="project-dialog">Project Name</label><br />
-						<input type="text" id="project-title" />
+						<label for="project-name">Project Name</label><br />
+						<input type="text" id="project-name" />
 					</div>
 					<div class="input">
 						<button formmethod="dialog">Cancel</button>
-						<button>Add New Project</button>
+						<button class="project-submit">Add New Project</button>
 					</div>
 				</form>
 			</dialog>
 			<ul class="projects-list">
-				<button>Main Project</button>
-				<button>Main Project</button>
-				<button>Main Project</button>
+				<button id="1">Main Project</button>
 			</ul>
 		</div>
 		<div class="todo-items">
